# mlx_convert

./: .gitignore  README.md  pyproject.toml  requirements-mlx.txt  requirements.txt  run_conversion.sh
docs/: conversion_decisions.md
scripts/: 01_download_model.py  02_extract_weights.py  03_analyze_architecture.py  04_convert_to_mlx.py  05_test_inference.py  parakeet_patch.py
