[project]
name = "mlx-convert"
version = "0.1.0"
description = "Convert Nemotron Speech Streaming to MLX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "safetensors==0.7.0",
    "PyYAML>=6.0.1",
    "rich>=13.0.0",
    "huggingface-hub==1.3.2",
]

[project.optional-dependencies]
mlx = [
    "mlx==0.30.3",
    "mlx-audio==0.2.10",
    "parakeet-mlx==0.5.0",
]


